kubernetes/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-broker
  name: kafka-service
  namespace: javapro-team42

spec:
  type: ClusterIP
  ports:
    - name: kafka-port
    - port: 9092
    - targetPort: 9092
  selector:
    app: kafka-broker
