kubernetes/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper-service
  name: zookeeper-service
  namespace: javapro-team42
spec:
  type: ClusterIP
  ports:
    - name: zookeeper-port
      port: 2181
  selector:
    app: zookeeper
