kubernetes/socialservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socialservice-ingress
  namespace: default
spec:
  rules:
    - host: codelounge.com
      http:
        paths:
          - path: /api
            pathType: Exact
            backend:
              service:
                name: socialservice-service
                port:
                  number: 8080
